# boids

./: Cargo.toml  LICENSE  README.md  shell.nix
src/: boid.rs  lib.rs
