[package]
name = "boids"
version = "0.1.0"
authors = ["Tom Jankauski <tomjankauski@gmail.com>"]
edition = "2018"
description = "Boids simiulation"
repository = "https://github.com/blargg/boids"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
nalgebra = "0.19.0"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3.29"
features = ["console"]

[profile.release]
opt-level = "s"
